[gd_scene load_steps=10 format=1]

[ext_resource path="res://Menus/scripts/PlayerSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/parallax-mountain.png" type="Texture" id=2]
[ext_resource path="res://Menus/SelectScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/PlayerItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/angel_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/knight_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/Beserker_full.png" type="Texture" id=7]
[ext_resource path="res://Menus/MenuButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menus/WorldSelect.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="TextureFrame" parent="."]

rect/scale = Vector2( 12, 12 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -548.0
margin/top = 0.0
margin/right = -276.0
margin/bottom = 160.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="SelectScreen" parent="." instance=ExtResource( 3 )]

[node name="AngelPlayer" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 540, 550 )
playerTexture = ExtResource( 5 )
playerName = "Angel"
playerStrength = 3
playerDefence = 4
playerHitpoints = 12
playerSpeed = 10
playerDescription = "The Angel is from another realm. Where it lacks in physical strength, it makes up for with massive hitpoints, and a very high speed gives them the first hit in most battles."

[node name="WarriorPlayer" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( -705.747, 502.113 )
playerTexture = ExtResource( 6 )
playerName = "Warrior"
playerStrength = 7
playerDefence = 10
playerHitpoints = 8
playerSpeed = 4
playerDescription = "A fierce human warrior from the Surface, this character has the strength to hit hard - but will they survive to make the final blow?"

[node name="BeserkerPlayer" parent="." instance=ExtResource( 4 )]

playerTexture = ExtResource( 7 )
playerName = "Beserker"
playerStrength = 12
playerDefence = 1
playerHitpoints = 10
playerSpeed = 9
playerDescription = "The beserker will never let you down with the damage he will inflict on evil creatures. But they may gravely injure him while he's striking..."

[node name="SelectPlayer" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 552.195, 1815.34 )
text = "Select Character"
scene = ExtResource( 9 )


